--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.13.3",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "mongoose": "^4.1.3",
     "snoocore": "^3.2.0",
     "superagent": "^1.3.0"
