--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "body-parser": "^1.13.3",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "handlebars": "^3.0.3",
     "jade": "^1.11.0",
     "mongoose": "^4.1.3",
+    "object-assign": "^4.0.1",
     "snoocore": "^3.2.0",
     "superagent": "^1.3.0"
   }
