--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "^1.13.3",
     "cors": "^2.7.1",
     "express": "^4.13.3",
-    "handlebars": "^3.0.3",
+    "imgur": "^0.1.6",
     "jade": "^1.11.0",
+    "lodash.clone": "^3.0.3",
     "mongoose": "^4.1.3",
     "object-assign": "^4.0.1",
-    "snoocore": "^3.2.0",
     "superagent": "^1.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.5",
+    "should": "^7.0.4"
   }
 }
