--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "body-parser": "^1.13.3",
     "cors": "^2.7.1",
     "express": "^4.13.3",
-    "imgur": "^0.1.6",
+    "imgur": "amoskyler/node-imgur",
     "jade": "^1.11.0",
     "lodash.clone": "^3.0.3",
     "mongoose": "^4.1.3",
